--- a/cart.html
+++ b/cart.html
@@ -225,11 +225,18 @@
                             </svg>
                         </div>
                         <div class="cart-item position-relative justify-content-center align-items-center px-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                                class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>
+                            <a href="./cart.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                                    class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                                </svg>
+                                <span
+                                    class="cart-item-quantity position-absolute top-0 start-75 translate-middle badge rounded-pill bg-danger">
+                                    2
+                                    <!-- <span class="visually-hidden">unread messages</span> -->
+                                </span>
+                            </a>
 
                             <div
                                 class="menudrop-ticket position-absolute bg-body-tertiary rounded-3 shadow-lg border border-2 border-dark-subtle p-4">
@@ -305,7 +312,8 @@
                             <tr class="">
                                 <td class="col-5">
                                     <div class="d-flex align-items-center">
-                                        <button type="button" class="btn-close border border-1 px-3 py-2" aria-label="Close"></button>
+                                        <button type="button" class="btn-close border border-1 px-3 py-2"
+                                            aria-label="Close"></button>
                                         <div class="col-4 p-2 me-1">
                                             <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
                                                 class="w-100" alt="">
@@ -340,7 +348,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="">
+                    <a href="./ao_nam.html" class="">
                         <button type="button" class="btn btn-light border border-1 fw-bold"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-arrow-left fw-bold" viewBox="0 0 16 16">
@@ -445,7 +453,7 @@
         </div>
     </footer>
     <!-- End footer -->
-     <script src="./assets/js/product_detail.js"></script>
+    <script src="./assets/js/product_detail.js"></script>
     <script src="./assets/js/cart.js"></script>
     <script src="./assets/js/app.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
