--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
                                 <p class="p-3 text-uppercase text-decoration-none text-color">Hotline: 0908 215 990</p>
                             </li>
                         </ul>
-
                     </div>
                     <!-- <div class="offcanvas-body">
                         <ul class="">
@@ -208,13 +207,37 @@
                             <input class="form-control me-2 position-relative" type="search" placeholder="Search"
                                 aria-label="Search">
                         </div>
-                        <div class="d-flex justify-content-center align-items-center px-3">
-                            <a href="./login.html">
+                        <div
+                            class="login-cart-item d-flex cart-item justify-content-center align-items-center px-3 nav-item p-2 mx-1 dropdown">
+                            <a href="./login.html" class="nav-link fw-semibold active">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                                     class="custom-icon bi bi-person-fill" viewBox="0 0 16 16">
                                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                                 </svg>
                             </a>
+                            <div
+                                class="menudrop-ticket position-absolute bg-body-tertiary rounded-3 shadow-lg border border-2 border-dark-subtle">
+                                <ul class="list-unstyled py-2">
+                                    <li class="px-3 py-1 ">
+                                        <a href="" class="text-decoration-none">Trang tài khoản</a>
+                                    </li>
+                                    <li class="px-3 py-1">
+                                        <a href="" class="text-decoration-none">Đơn hàng</a>
+                                    </li>
+                                    <li class="px-3 py-1">
+                                        <a href="" class="text-decoration-none">Địa chỉ</a>
+                                    </li>
+                                    <li class="px-3 py-1">
+                                        <a href="" class="text-decoration-none">Tài khoản</a>
+                                    </li>
+                                    <li class="px-3 py-1">
+                                        <a href="" class="text-decoration-none">Yêu thích</a>
+                                    </li>
+                                    <li class="px-3 py-1">
+                                        <a href="" class="text-decoration-none">Thoát</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="d-flex justify-content-center align-items-center px-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
@@ -223,17 +246,18 @@
                                     d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                             </svg>
                         </div>
-                        <div class="cart-item position-relative justify-content-center align-items-center px-3">
+                        <div class="d-flex cart-item position-relative justify-content-center align-items-center px-3">
                             <a href="./cart.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                                     class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
                                     <path
                                         d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
                                 </svg>
-                                <span class="position-absolute top-0 start-75 translate-middle badge rounded-pill bg-danger">
+                                <span
+                                    class="position-absolute top-75 start-75 translate-middle badge rounded-pill bg-danger">
                                     2
                                     <span class="visually-hidden">unread messages</span>
-                                  </span>
+                                </span>
                             </a>
 
                             <div
