--- a/product_detail.html
+++ b/product_detail.html
@@ -205,81 +205,79 @@
                   </li>
               </ul>
               <form class="d-flex" role="search">
-                  <div class="me-4">
-                      <input class="form-control me-2 position-relative" type="search" placeholder="Search"
-                          aria-label="Search">
-                  </div>
-                  <div class="d-flex justify-content-center align-items-center px-3">
-                      <a href="./login.html">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                              class="custom-icon bi bi-person-fill" viewBox="0 0 16 16">
-                              <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
-                          </svg>
-                      </a>
-                  </div>
-                  <div class="d-flex justify-content-center align-items-center px-3">
+                <div class="me-4">
+                  <input class="form-control me-2 position-relative" type="search" placeholder="Search"
+                      aria-label="Search">
+              </div>
+              <div class="d-flex justify-content-center align-items-center px-3">
+                  <a href="./login.html">
                       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                          class="custom-icon bi bi-heart" viewBox="0 0 16 16">
-                          <path
-                              d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                          class="custom-icon bi bi-person-fill" viewBox="0 0 16 16">
+                          <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                       </svg>
-                  </div>
-                  <div class="cart-item position-relative justify-content-center align-items-center px-3 py-1">
-                      <a href="./cart.html">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                              class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
-                              <path
-                                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                          </svg>
-                          <span class="position-absolute top-0 start-75 translate-middle badge rounded-pill bg-danger">
-                              2
-                              <span class="visually-hidden">unread messages</span>
-                            </span>
-                      </a>
+                  </a>
+              </div>
+              <div class="d-flex justify-content-center align-items-center px-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                      class="custom-icon bi bi-heart" viewBox="0 0 16 16">
+                      <path
+                          d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                  </svg>
+              </div>
+              <div class="cart-item position-relative justify-content-center align-items-center px-3">
+                  <a href="./cart.html">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                          class="custom-icon bi bi-cart3" viewBox="0 0 16 16">
+                          <path
+                              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                      </svg>
+                      <span
+                          class="cart-item-quantity position-absolute top-0 start-75 translate-middle badge rounded-pill bg-danger">
+                          2
+                          <!-- <span class="visually-hidden">unread messages</span> -->
+                      </span>
+                  </a>
 
-                      <div
-                          class="menudrop-ticket position-absolute bg-body-tertiary rounded-3 shadow-lg border border-2 border-dark-subtle p-4">
-                          <div class="cart-list">
-                              <div class="d-flex border-bottom">
-                                  <div class=" col-5 p-2">
-                                      <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
-                                          class="w-75" alt="">
-                                  </div>
-                                  <div class="col-5" style="font-size: .9rem;">
-                                      <p class="fw-light mb-1 fs-5">Áo Polo nam Pack P</p>
-                                      <p class="text-color mb-1"><b>Màu sắc: </b>Xanh đen</p>
-                                      <p class="text-color mb-1"><b>Size: </b>XXL</p>
-                                      <p class="text-color mb-1">1 x <b>170.000đ</b></p>
-                                  </div>
-                                  <div class="">
-                                    <button type="button" class="btn-close border border-1 p-2" aria-label="Close"></button>
-                                  </div>
+                  <div
+                      class="menudrop-ticket position-absolute bg-body-tertiary rounded-3 shadow-lg border border-2 border-dark-subtle p-4">
+                      <div class="cart-list">
+                          <div class="d-flex border-bottom">
+                              <div class=" col-6 p-2">
+                                  <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
+                                      class="w-75" alt="">
                               </div>
-                              <!-- <div class="d-flex border-bottom">
-                                  <div class=" col-6 p-2">
-                                      <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
-                                          class="w-75" alt="">
-                                  </div>
-                                  <div class="col-6">
-                                      <p class="fw-light mb-1 fs-5">Áo Polo nam Pack P</p>
-                                      <p class="text-color mb-1"><b>Màu sắc: </b>Xanh đen</p>
-                                      <p class="text-color mb-1"><b>Size: </b>XXL</p>
-                                      <p class="text-color mb-1">1 x <b>170.000đ</b></p>
-                                  </div>
-                              </div> -->
+                              <div class="col-6">
+                                  <p class="fw-light mb-1 fs-5">Áo Polo nam Pack P</p>
+                                  <p class="text-color mb-1"><b>Màu sắc: </b>Xanh đen</p>
+                                  <p class="text-color mb-1"><b>Size: </b>XXL</p>
+                                  <p class="text-color mb-1">1 x <b>170.000đ</b></p>
+                              </div>
                           </div>
-                          <div class="d-flex justify-content-between mt-3 border-bottom">
-                              <p class="text-color fw-bold">Tổng số phụ: </p>
-                              <p class="fw-bold">550.000đ</p>
-                          </div>
-                          <div class="d-flex flex-column align-items-center mt-3 b-0">
-                              <button type="button" class="btn btn-dark w-100">
-                                  <a href="./cart.html" class="text-decoration-none text-light">XEM GIỎ HÀNG</a>
-                              </button>
-                              <button type="button" class="btn bg-button w-100 mt-2">THANH TOÁN</button>
+                          <div class="d-flex border-bottom">
+                              <div class=" col-6 p-2">
+                                  <img src="./assets/images/products/z4898669442353-f49460f005e8bc577c5766aaeaafbeb9-600x600.jpg"
+                                      class="w-75" alt="">
+                              </div>
+                              <div class="col-6">
+                                  <p class="fw-light mb-1 fs-5">Áo Polo nam Pack P</p>
+                                  <p class="text-color mb-1"><b>Màu sắc: </b>Xanh đen</p>
+                                  <p class="text-color mb-1"><b>Size: </b>XXL</p>
+                                  <p class="text-color mb-1">1 x <b>170.000đ</b></p>
+                              </div>
                           </div>
                       </div>
+                      <div class="d-flex justify-content-between mt-3 border-bottom">
+                          <p class="text-color fw-bold">Tổng số phụ: </p>
+                          <p class="fw-bold">550.000đ</p>
+                      </div>
+                      <div class="d-flex flex-column align-items-center mt-3 b-0">
+                          <button type="button" class="btn btn-dark w-100">
+                              <a href="./cart.html" class="text-decoration-none text-light">XEM GIỎ HÀNG</a>
+                          </button>
+                          <button type="button" class="btn btn-warning w-100 mt-2">THANH TOÁN</button>
+                      </div>
                   </div>
+              </div>
               </form>
           </div>
       </div>
